--- a/WebTech-Backend/views/home.pug
+++ b/WebTech-Backend/views/home.pug
@@ -1,12 +1,4 @@
-doctype html
-html
-    head
-        title WebTech's StreetCats
-    body
-        h1 Welcome to WebTech's StreetCats
-        footer 
-            p Developed for Unina's 
-                em Web Technologies 2025 
-                | course
-            p by 
-                em Giuseppe Amato
+extends base-layout.pug
+
+block heading
+    h1 Welcome to WebTech's StreetCats!
