--- a/WebTech-Frontend/src/app/homepage/homepage.component.html
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.html
@@ -1,1 +1,8 @@
-<p>homepage works!</p>
+<section class="flex items-center justify-center h-full m-4 dark:text-white">
+  <div>
+    <h1 class="text-4xl font-bold text-center my-4">WebTech Streetcats</h1>
+    <p class="max-w-md mx-auto text-center font-medium text-lg text-gray-700 dark:text-gray-50">
+      Welcome to Streetcats!
+    </p>
+  </div>  
+</section>
