--- a/WebTech-Frontend/src/app/navbar/navbar.component.html
+++ b/WebTech-Frontend/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
     <div class="{{isOpen ? 'block' : 'hidden'}} w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-semibold flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-800 dark:border-gray-700">
         <li>
-          <a (click)="handleNavigationClick()" routerLink="/" routerLinkActive="bg-teal-700 hover:bg-teal-800 dark:hover:bg-teal-600 text-white md:text-teal-700 md:dark:text-teal-500" class="block py-2 px-3 text-gray-900 rounded md:bg-transparent hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" aria-current="page">Home</a>
+          <a (click)="handleNavigationClick()" routerLink="/" routerLinkActive="bg-teal-700 hover:bg-teal-800 dark:hover:bg-teal-600 text-white md:text-teal-700 md:dark:text-teal-500" [routerLinkActiveOptions]="{ exact: true }" class="block py-2 px-3 text-gray-900 rounded md:bg-transparent hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" aria-current="page">Home</a>
         </li>
         @if(! this.authService.isUserAuthenticated()){
           <li>
