--- a/WebTech-Frontend/src/app/homepage/homepage.component.html
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.html
@@ -1,8 +1,14 @@
-<section class="flex items-center justify-center h-full m-4 text-white">
+<section class="flex items-center justify-center m-4 text-white">
   <div>
     <h1 class="text-4xl font-bold text-center my-4">WebTech Streetcats</h1>
-    <p class="max-w-md mx-auto text-center font-medium text-lg text-gray-50">
-      Welcome to Streetcats!
-    </p>
+    @if(! this.authService.isUserAuthenticated()){
+      <p class="max-w-md mx-auto text-center font-medium text-lg text-gray-50">
+          Welcome to Streetcats!
+      </p>
+    } @else {
+      <p class="max-w-md mx-auto text-center font-medium text-lg text-gray-50">
+        Welcome back, {{authService.getUser()}}!
+      </p>
+    }
   </div>  
 </section>
