--- a/WebTech-Frontend/src/styles.scss
+++ b/WebTech-Frontend/src/styles.scss
@@ -1,2 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
-@import "tailwindcss";
+@use 'tailwindcss';
+@use 'ngx-toastr/toastr';
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.toast-success {
+  background-color: #0fc396;
+}
+.toast-error {
+  background-color: #BD362F;
+}
+.toast-info {
+  background-color: #2F96B4;
+}
+.toast-warning {
+  background-color: #F89406;
+}
+
+a.link {
+  @apply underline text-teal-400 hover:text-teal-700 visited:text-amber-400
+}
+
+.form-error{
+  @apply text-red-400 text-sm pt-2;
+}
