--- a/WebTech-Frontend/src/app/login/login.component.html
+++ b/WebTech-Frontend/src/app/login/login.component.html
@@ -32,7 +32,7 @@
                   </div>
                 <button type="submit" class="w-full text-white bg-teal-700 hover:bg-teal-800 rounded-lg text-sm px-5 py-2.5 text-center">Sign in</button>
                 <p class="text-sm font-medium text-gray-400">
-                    Don't have an account yet? <a routerLink="/signup" class="link text-white">Sign up</a>
+                    Don't have an account yet? <a routerLink="/signup" class="link">Sign up</a>
                 </p>
             </form>
         </div>
