fixes to login and signup pages

--- a/WebTech-Frontend/src/app/homepage/homepage.component.html
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.html
@@ -7,7 +7,7 @@
       </p>
     } @else {
       <p class="max-w-md mx-auto text-center font-medium text-lg text-gray-50">
-        Welcome back, {{authService.getUser()}}!
+        Welcome, {{authService.getUser()}}!
       </p>
     }
   </div>  
