--- a/WebTech-Frontend/src/app/navbar/navbar.component.html
+++ b/WebTech-Frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full z-50 shadow-lg">
   <div class="container mx-auto flex justify-between flex-wrap">
-    <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse flex-grow">
-      <span class="self-center text-xl font-semibold whitespace-nowrap text-white">Streetcats</span>
+    <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <span class="self-center text-xl font-semibold whitespace-nowrap text-white">WebTech Streetcats</span>
     </a>
     <button (click)="toggle()" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-1 w-7 h-7 justify-center text-sm text-gray-400 rounded-lg md:hidden hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-600 mx-2" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
