--- a/WebTech-Frontend/src/styles.scss
+++ b/WebTech-Frontend/src/styles.scss
@@ -2,7 +2,6 @@
 @use 'tailwindcss';
 @use 'ngx-toastr/toastr';
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,7 +20,7 @@
 }
 
 a.link {
-  @apply underline text-teal-400 hover:text-teal-700 visited:text-amber-400
+  @apply underline text-teal-400 hover:text-teal-700 visited:text-blue-400 visited:hover:text-blue-700;
 }
 
 .form-error{
