--- a/WebTech-Frontend/src/app/navbar/navbar.component.html
+++ b/WebTech-Frontend/src/app/navbar/navbar.component.html
@@ -1,16 +1,16 @@
-<nav class="bg-gray-800 p-4 fixed top-0 left-0 w-full z-50 shadow-lg">
-  <div class="container mx-auto flex justify-between flex-wrap">
-    <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <span class="self-center text-xl font-semibold whitespace-nowrap text-white">WebTech Streetcats</span>
+<nav>
+  <div class="top-container">
+    <a routerLink="/" class="logo">
+      <span>WebTech Streetcats</span>
     </a>
-    <button (click)="toggle()" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-1 w-7 h-7 justify-center text-sm text-gray-400 rounded-lg md:hidden hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-600 mx-2" aria-controls="navbar-default" aria-expanded="false">
+    <button (click)="toggle()" data-collapse-toggle="navbar-default" type="button" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
     </button>
-    <div class="{{isOpen ? 'block' : 'hidden'}} w-full md:block md:w-auto" id="navbar-default">
-      <ul class="font-semibold flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-800 dark:border-gray-700">
+    <div class="{{isOpen ? 'block' : 'hidden'}}" id="navbar-default">
+      <ul class="buttons-ul">
         <li>
           <a (click)="handleNavigationClick()" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="navbar-button" aria-current="page">Home</a>
         </li>
