--- a/WebTech-Frontend/src/app/navbar/navbar.component.scss
+++ b/WebTech-Frontend/src/app/navbar/navbar.component.scss
@@ -4,11 +4,40 @@
 @tailwind components;
 @tailwind utilities;
 
-.navbar-button{
-  @apply block py-2 px-3 rounded text-white hover:bg-gray-700
-
+nav {
+    @apply bg-gray-800 p-4 fixed top-0 left-0 w-full z-50 shadow-lg;
 }
 
-.navbar-button.active {
-  @apply block py-2 px-3 rounded text-white bg-teal-700 hover:bg-teal-800;
+div.top-container {
+    @apply container mx-auto flex justify-between flex-wrap;
+
+    a.logo {
+        @apply flex items-center space-x-3 rtl:space-x-reverse;
+
+        span {
+            @apply self-center text-xl font-semibold whitespace-nowrap text-white;
+        }
+    }
+
+    button {
+        @apply inline-flex items-center p-1 w-7 h-7 justify-center text-sm text-gray-400 rounded-lg md:hidden hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-600 mx-2;
+    }
+
+    div#navbar-default {
+        @apply w-full md:block md:w-auto
+    }
+}
+
+
+ul.buttons-ul {
+    @apply font-semibold flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-800 dark:border-gray-700;
+
+    a.navbar-button {
+        @apply block py-2 px-3 rounded text-white hover:bg-gray-700;
+
+    }
+
+    a.navbar-button.active {
+        @apply block py-2 px-3 rounded text-white bg-teal-700 hover:bg-teal-800;
+    }
 }
