--- a/WebTech-Frontend/src/app/login/login.component.html
+++ b/WebTech-Frontend/src/app/login/login.component.html
@@ -31,7 +31,7 @@
                     }
                   </div>
                 <button type="submit" class="auth-submit">Sign in</button>
-                <p class="text-sm font-medium text-gray-400">
+                <p class="signup-link">
                     Don't have an account yet? <a routerLink="/signup" class="link">Sign up</a>
                 </p>
             </form>
