variables in lowercase so sonarqube shuts up

--- a/WebTech-Frontend/src/app/auth/login/login.component.html
+++ b/WebTech-Frontend/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <app-auth-form
     [title]="'Login'"
-    [buttonText]="'Login'"
-    [authRestServiceFun]="restService.login.bind(restService)">
+    [button_text]="'Login'"
+    [restservice_auth_fun]="restService.login.bind(restService)">
 </app-auth-form>
