--- a/WebTech-Frontend/src/app/auth/signup/signup.component.html
+++ b/WebTech-Frontend/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <app-auth-form
     [title]="'Sign up'"
-    [buttonText]="'Sign up'"
-    [authRestServiceFun]="restService.signup.bind(restService)">
+    [button_text]="'Sign up'"
+    [restservice_auth_fun]="restService.signup.bind(restService)">
 </app-auth-form>
