fixed error after renaming variable

--- a/WebTech-Frontend/src/app/auth/auth-form/authForm.component.html
+++ b/WebTech-Frontend/src/app/auth/auth-form/authForm.component.html
@@ -30,7 +30,7 @@
                       }
                     }
                   </div>
-                <button type="submit" class="auth-submit">{{ buttonText }}</button>
+                <button type="submit" class="auth-submit">{{ button_text }}</button>
             </form>
         </div>
       </div>
