added this for extra clarity

--- a/WebTech-Frontend/src/app/auth/login/login.component.html
+++ b/WebTech-Frontend/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <app-auth-form
     [title]="'Login'"
     [button_text]="'Login'"
-    [restservice_auth_fun]="restService.login.bind(restService)">
+    [restservice_auth_fun]="this.restService.login.bind(restService)">
 </app-auth-form>
