--- a/WebTech-Frontend/src/app/app.component.html
+++ b/WebTech-Frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<div class="flex flex-col h-screen bg-gray-50 dark:bg-gray-900">
-  <app-navbar class="sticky top-0"/>
-  <main class="container mx-auto flex-grow pt-20">
+<div class="app">
+  <app-navbar class="navbar"/>
+  <main class="main">
     <router-outlet></router-outlet>
   </main>
 </div>
