--- a/WebTech-Frontend/src/app/homepage/homepage.component.html
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.html
@@ -1,9 +1,9 @@
 <section>
   <div>
-    <h1 class="title">WebTech Streetcats</h1>
+    <h1 class="title">Welcome to WebTech Streetcats</h1>
+    <!-- <img src="assets/yamamaya.jpg" alt="yamamaya!"/> -->
     @if(! this.authService.isUserAuthenticated()){
     <p class="subtitle">
-      Welcome to Streetcats!
     </p>
     } @else {
     <p class="subtitle">
