--- a/WebTech-Frontend/src/app/homepage/homepage.component.scss
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.scss
@@ -8,6 +8,7 @@ section {
     @apply flex items-center justify-center m-4 text-white;
 
     div { 
+        @apply flex flex-col items-center justify-center;
         h1.title {
             @apply text-4xl font-bold text-center my-4;
         }
@@ -16,4 +17,8 @@ section {
             @apply max-w-md mx-auto text-center font-medium text-lg text-gray-50;
         }
     }
+}
+
+img {
+    @apply w-full h-auto rounded-lg shadow-lg;
 }
