imported ngx-leaflet

--- a/WebTech-Frontend/src/app/homepage/homepage.component.html
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <section>
   <div>
     <h1 class="title">Welcome to WebTech Streetcats</h1>
-    <!-- <img src="assets/yamamaya.jpg" alt="yamamaya!"/> -->
+    <img src="assets/yamamaya.jpg" alt="yamamaya!"/>
     @if(! this.authService.isUserAuthenticated()){
     <p class="subtitle">
     </p>
