added leaflet map to homepage

--- a/WebTech-Frontend/src/app/app.component.html
+++ b/WebTech-Frontend/src/app/app.component.html
@@ -4,4 +4,11 @@
   <main class="main">
     <router-outlet></router-outlet>
   </main>
+  <!-- <footer>
+    @if(this.authService.isUserAuthenticated()){
+    <p>
+      Logged in as {{authService.getUser()}}
+    </p>
+    }
+  </footer> -->
 </div>
