--- a/WebTech-Frontend/src/app/app.component.scss
+++ b/WebTech-Frontend/src/app/app.component.scss
@@ -14,4 +14,8 @@ div.app {
     main.main {
         @apply container mx-auto flex-grow pt-20;
     }
+
+    // footer {
+    //     @apply absolute bottom-0 right-0 bg-gray-900 text-white;
+    // }
 }
