--- a/WebTech-Frontend/src/app/navbar/navbar.component.scss
+++ b/WebTech-Frontend/src/app/navbar/navbar.component.scss
@@ -38,7 +38,11 @@ ul.buttons-ul {
     }
 
     a.navbar-button.upload-button {
-        @apply text-orange-500 ;
+        @apply text-orange-500;
+    }
+
+    a.navbar-button.upload-button.active {
+        @apply text-white bg-orange-500 hover:bg-orange-600;
     }
 
     a.navbar-button.active {
