--- a/WebTech-Frontend/src/app/upload/upload.component.html
+++ b/WebTech-Frontend/src/app/upload/upload.component.html
@@ -1,1 +1,11 @@
-<p>upload works!</p>
+<section>
+  <div class="hero">
+    <h1 class="title">WebTech Streetcats</h1>
+    <h2 class="subtitle">
+      Select the position of the cat you want to upload!
+    </h2>
+    <div class="map-container">
+      <app-map></app-map>
+    </div>
+  </div>
+</section>
