--- a/WebTech-Frontend/src/app/homepage/homepage.component.scss
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.scss
@@ -5,20 +5,20 @@
 @tailwind utilities;
 
 section {
-    @apply flex items-center justify-center m-4 text-white;
+    @apply flex items-center justify-center m-4 z-30  text-white;
 
     div.hero { 
         @apply flex flex-col items-center justify-center;
         h1.title {
-            @apply text-4xl font-bold text-center my-4;
+            @apply text-4xl font-bold text-center mb-2;
         }
     
         .subtitle {
-            @apply max-w-md mx-auto text-center font-medium text-lg text-gray-50;
+            @apply max-w-md mx-auto text-center font-medium text-lg mb-5 text-gray-50;
         }
 
         div.map-container {
-            @apply w-[80vh] max-w-5xl h-[60vh] top-[10vh] relative;
+            @apply w-[80vh] max-w-5xl h-[60vh] top-[2vh] relative;
         }
     }
 }
