--- a/WebTech-Frontend/src/app/map/map.component.html
+++ b/WebTech-Frontend/src/app/map/map.component.html
@@ -1,4 +1,1 @@
-<div class="leaflet"
-    leaflet 
-    [leafletOptions]="options">
-</div>
+<div class="leaflet" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)"></div>
