--- a/WebTech-Frontend/src/app/auth/signup/signup.component.html
+++ b/WebTech-Frontend/src/app/auth/signup/signup.component.html
@@ -1,5 +1,6 @@
 <app-auth-form
     [title]="'Sign up'"
     [button_text]="'Sign up'"
+    [require_password_confirmation]="true"
     [restservice_auth_fun]="this.restService.signup.bind(restService)">
 </app-auth-form>
