the grand css rewrite

--- a/WebTech-Frontend/src/app/app.component.html
+++ b/WebTech-Frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <div class="app">
-  <app-navbar/>
+  <app-navbar class="navbar"/>
   <main class="main">
     <router-outlet></router-outlet>
   </main>
-  <app-footer/>
+  <!-- <app-footer class="footer"/> -->
 </div>
