--- a/WebTech-Frontend/src/app/homepage/homepage.component.html
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.html
@@ -4,8 +4,6 @@
     <h2 class="subtitle">
       Find cats in your area!
     </h2>
-    <div class="map-container">
-      <app-map></app-map>
-    </div>
   </div>
+  <app-map class="map-component"></app-map>
 </section>
