--- a/WebTech-Frontend/src/app/upload/upload.component.scss
+++ b/WebTech-Frontend/src/app/upload/upload.component.scss
@@ -4,47 +4,32 @@
 @tailwind components;
 @tailwind utilities;
 
-
 section.upload-section {
-  @apply bg-gray-900 p-10;
+    @apply flex flex-col items-center justify-center;
 
-  div.first {
-    @apply flex flex-col items-center justify-center px-6 py-8 mx-auto h-full;
-    
-    div.second {
-      @apply w-full bg-gray-800 rounded-lg shadow border md:mt-0  xl:p-0 border-gray-700;
-
-      div.third {
-        @apply p-6 space-y-4 md:space-y-6 sm:p-8;
-      }
+    h1.upload-title {
+        @apply text-white text-4xl font-bold mb-10;
     }
-  }
-}
 
-h1.upload-title {
-  @apply text-xl font-bold leading-tight tracking-tight text-white md:text-2xl text-center;
-}
+    form.upload-form {
+        @apply flex-grow p-4 bg-gray-800 border border-gray-700 rounded-b-lg w-full max-w-200 mb-10;
+        @apply flex flex-col items-stretch;
 
-form.upload-form {
-  @apply space-y-4 md:space-y-6 grid text-white;
-    
-  label.upload-label {
-    @apply block mb-2 font-bold text-xl;
-  }
+        div {
+            @apply flex flex-col items-stretch justify-center mb-4;
 
-  #map.map-component {
-    @apply max-w-2xl h-100 mb-4 rounded-lg border border-gray-700;
-  }
+            label.upload-label {
+                @apply text-lg font-semibold text-gray-300;
+            }
 
-  input, textarea {
-    @apply bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block w-full p-2.5;
-  }
+            input.title-input, textarea.descr-input {
+                @apply w-full bg-gray-200 border border-gray-300 rounded-b-lg text-gray-900 w-full;
+            }
+        }
 
-  input.file-input {
-    @apply max-w-[40vh] bg-gray-200 hover:bg-gray-400;
-  }
+        button.upload-submit {
+            @apply  mt-5 text-white font-bold bg-teal-700 hover:bg-teal-800 p-2 rounded-md;
+        }
+    }
 
-  button.upload-submit {
-    @apply w-full text-white bg-teal-700 hover:bg-teal-800 rounded-lg text-sm px-5 py-2.5 text-center;
-  }
 }
