--- a/WebTech-Frontend/src/app/app.component.scss
+++ b/WebTech-Frontend/src/app/app.component.scss
@@ -5,9 +5,13 @@
 @tailwind utilities;
 
 div.app {
-    @apply flex flex-col bg-gray-900;
+    @apply h-screen bg-gray-900 flex flex-col;
+
+    .navbar {
+        @apply mb-20;
+    }
 
     main.main {
-        @apply container mx-auto flex-grow pt-20;
+        @apply flex-grow overflow-auto;
     }
 }
