--- a/WebTech-Frontend/src/app/homepage/homepage.component.scss
+++ b/WebTech-Frontend/src/app/homepage/homepage.component.scss
@@ -5,20 +5,17 @@
 @tailwind utilities;
 
 section {
-    @apply flex items-center justify-center m-4 z-30  text-white;
+    @apply flex flex-col items-center justify-center;
 
-    div.hero { 
-        @apply flex flex-col items-center justify-center;
-        h1.title {
-            @apply text-4xl font-bold text-center mb-2;
-        }
-    
-        .subtitle {
-            @apply max-w-md mx-auto text-center font-medium text-lg mb-5 text-gray-50;
-        }
+    div.hero {
+        @apply flex-1 text-center text-white font-bold p-2;
 
-        div.map-container {
-            @apply w-[80vh] max-w-5xl h-[60vh] top-[2vh] relative;
+        h1 {
+            @apply text-4xl mb-2;
         }
+    }
+
+    .map-component {
+        @apply flex-grow w-full h-auto p-4;
     }
 }
