--- a/WebTech-Frontend/src/app/auth/auth-form/authForm.component.scss
+++ b/WebTech-Frontend/src/app/auth/auth-form/authForm.component.scss
@@ -1,41 +1,73 @@
-@use 'tailwindcss';
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 section.auth-section {
-    @apply flex flex-col items-center justify-center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     h1.auth-title {
-        @apply text-white text-4xl font-bold mb-10;
+        color: white;
+        font-size: 2.25rem;
+        font-weight: bold;
+        margin-bottom: 2.5rem;
     }
 
     form.auth-form {
-        @apply flex-grow p-4 bg-gray-800 border border-gray-700 rounded-b-lg;
-        @apply flex flex-col items-center justify-center;
+        flex-grow: 1;
+        padding: 1rem;
+        background-color: #2d3748;
+        border: 1px solid;
+        border-radius: 0.5rem;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
 
         div {
-            @apply flex flex-col items-center justify-center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
 
             label.auth-label {
-                @apply text-lg font-semibold text-gray-300;
+                font-size: 1.125rem;
+                font-weight: 600;
+                color: whitesmoke;
+                margin-bottom: 0.5rem;
             }
 
             input.auth-input {
-                @apply w-auto min-w-100 bg-gray-200 border border-gray-300 rounded-b-lg text-gray-900;
+                width: auto;
+                min-width: 25rem;
+                background-color: whitesmoke;
+                border: 1px solid;
+                border-radius: 0.5rem;
+                color: black;
             }
 
             div.auth-error{
-                @apply min-h-10;
+                min-height: 10px;
+
                 p.form-error {
-                    @apply text-red-500 text-sm;
+                    color: red;
+                    font-size: small;
                 }
             }
         }
 
         button.auth-submit {
-            @apply  mt-5 text-white font-bold bg-teal-700 hover:bg-teal-800 p-2 rounded-md;
+            margin-top: 1.25rem;
+            color: white;
+            font-weight: bold;
+            padding: 0.5rem;
+            border-radius: 0.375rem;
+            background-color: teal;
+            // transition: background-color 0.2s ease;
+
+            &:hover {
+                background-color: #115e59;
+            }
         }
     }
 
