--- a/WebTech-Frontend/src/app/map/map.component.scss
+++ b/WebTech-Frontend/src/app/map/map.component.scss
@@ -1,17 +1,30 @@
-@use 'tailwindcss';
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 div.map-container{
-    @apply flex flex-col items-center justify-center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     .leaflet {
-        @apply flex-grow w-full max-w-200 h-auto min-h-100 rounded-lg p-4 mb-2;
+        flex-grow: 1;
+        width: 100%;
+        max-width: 50rem;
+        height: auto;
+        min-height: 30rem;
+        border-radius: 0.5rem;
+        padding: 1rem;
+        margin-bottom: 0.5rem;
     }
 
     button {
-        @apply rounded-md p-2 border text-white bg-transparent hover:bg-gray-600;
+        border-radius: 0.375rem;
+        padding: 0.5rem;
+        border: 1px solid;
+        color: white;
+        background-color: transparent;
+        // transition: background-color 0.2s ease;
+
+        &:hover {
+            background-color: darkgrey;
+        }
     }
 }
